--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,6 +5,8 @@ find_package(OpenGL REQUIRED)
 #target_include_directories(viewapp ${OPENGL_INCLUDE_DIR})
 
 
+
 add_executable(viewapp main.cpp)
+add_library(viewlib SHARED lib.cpp)
 target_link_libraries(viewapp ${OPENGL_gl_LIBRARY})
 target_link_libraries(viewapp glfw)
