--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(viewapp main.cpp)
 add_library(viewlib SHARED lib.cpp)
 target_link_libraries(viewapp ${OPENGL_gl_LIBRARY})
 target_link_libraries(viewapp glfw)
+target_link_libraries(viewapp dl)
