investigate structure with pahole

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(OpenGL REQUIRED)
 #target_include_directories(viewapp ${OPENGL_INCLUDE_DIR})
 
 
-
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
 add_executable(viewapp main.cpp)
 add_library(viewlib SHARED lib.cpp)
 target_link_libraries(viewapp ${OPENGL_gl_LIBRARY})
